gitops/app-configs/Archive/organizr.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organizr-ingress
  namespace: organizr
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # argocd.argoproj.io/hook: Sync
    helm.sh/hook: "post-install"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`organizr.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: organizr
          port: 80
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
